# rukh

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SECURITY.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  codeql.yml  release.yml
apps/api-gateway/: Dockerfile  alembic.ini  cache.py  database.py  main.py  main.py.old  models.py  nats_client.py  requirements.txt
apps/api-gateway/alembic/: env.py
apps/api-gateway/alembic/versions/: 20251020_0936_168647ec70ca_initial_schema.py
apps/web/: Dockerfile  package.json  pnpm-lock.yaml
apps/web/src/app/: page.tsx
deployments/docker/: docker-compose.yml
docs/: architecture.md
integrations/foundry/: foundry.toml  test_generator.py
integrations/foundry/src/: ReentrancyVault.sol
integrations/foundry/test/: ReentrancyVault.t.sol
integrations/slither/: slither_analyzer.py
services/analysis-planner/: main.py  main.py.old  requirements.txt
services/attack-graph/: Cargo.toml
services/bytecode-intel/: Cargo.toml
services/fuzz-runner/: Cargo.toml
services/static-intel/: Cargo.toml
services/static-intel/src/: main.rs
services/test-synth/: main.py
templates/poc-library/: README.md
templates/poc-library/flash-loan/: FlashLoanPoC.sol
templates/poc-library/reentrancy/: ReentrancyPoC.sol
tools/exploit-generator/: exploit_generator.py
