[package]
name = "static-intel"
version = "0.1.0"
edition = "2021"
authors = ["Volodymyr Stetsenko <volodymyr.stetsenko@example.com>"]
description = "Static analysis intelligence service for RUKH platform"
license = "MIT"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-nats = "0.37"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"
solang-parser = "0.3"
